@@ -40,10 +40,9 @@ void reconnect_set_quiet(struct reconnect *, bool quiet);
 const char *reconnect_get_name(const struct reconnect *);
 void reconnect_set_name(struct reconnect *, const char *name);
 
-/* Defaults, all in msecs. */
-#define RECONNECT_DEFAULT_MIN_BACKOFF 1000
-#define RECONNECT_DEFAULT_MAX_BACKOFF 8000
-#define RECONNECT_DEFAULT_PROBE_INTERVAL 5000
+int reconnect_default_min_backoff();
+int reconnect_default_max_backoff();
+int reconnect_default_probe_interval();
 
 int reconnect_get_min_backoff(const struct reconnect *);
 int reconnect_get_max_backoff(const struct reconnect *);
