@@ -26,8 +26,6 @@ struct ovsdb;
 struct ovsdb_schema;
 struct uuid;
 
-#define RELAY_SOURCE_DEFAULT_PROBE_INTERVAL RECONNECT_DEFAULT_PROBE_INTERVAL
-
 typedef struct ovsdb_error *(*schema_change_callback)(
                                        struct ovsdb *,
                                        const struct ovsdb_schema *,
